[package]
name = "chameleon"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.5.2"
lambda_runtime = "0.5.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
http = "0.2.8"
serde = "1.0.136"
serde_json = "1.0.81"
reqwest = "0.11.10"
hex = "0.4.3"
sodiumoxide = "0.2.7"
